--- a/Nodejs Server/public/styles/style.css
+++ b/Nodejs Server/public/styles/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 
-.mid {
+.style-headline {
   color:#16d93d
 }
 
